--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,115 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Профессиональный HTML и CSS</a>», уровень 2.</p>
-
+    <header class="page-header">
+      <nav class="main-nav">
+        <button class="main-nav__toggle toggle-close" type="button"><span class="visually-hidden">Закрыть меню</span></button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active">
+              <a>Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a href="#">Фото и видео</a>
+            </li>
+            <li class="site-list__item">
+              <a href="#">Форма отзыва</a>
+            </li>
+            <li class="site-list__item">
+              <a href="#">HTML Academy</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="#" width="1" height="1" alt="Седона">
+      </a>
+      <button class="main-nav__toggle toggle-open"><span class="visually-hidden">Открыть меню</span></button>
+    </header> 
+    <main class="page-main">
+      <section class="intro">
+        <header class="intro__header">
+          <h2 class="visually-hidden">Преимущества городка Седона</h2>
+          <img class="intro__header__landscape" src="#" width="1" height="1" alt="Ландшафт">
+          <b class="intro__topic">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</b>
+          <p class="intro__intro">Рассмотрим 5 причин, по которым</p>
+          <p class="intro__intro">Седона круче, чем гранд каньон!</p>
+        </header>
+        <ul class="advantages">
+          <li class="advantages__item">
+            <h3 class="advantages__title advantages__title--color--white">Настоящий городок</h3>
+            <p class="advantages__number">— №1 —</p>
+            <p class="advantages__description advantages__description--color--white">Седона не аттракцион для туристов, там течет своя жизнь</p>
+            <img class="advantages__photo" src="#" width="1" height="1" alt="Жилье">
+            <ul>
+              <li class="advantages__detail advantages__detail--lodging">
+                <p class="advantages__title advantages__title--color--black">Жилье</p>
+                <p class="advantages__description advantages__description--color--black">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+              </li>
+              <li class="advantages__detail advantages__detail--souvenirs">
+                <p class="advantages__title advantages__title--color--black">Сувениры</p>
+                <p class="advantages__description advantages__description--color--black">Не только китайского, но и местного производства!</p>
+              </li>
+              <li class="advantages__detail advantages__detail--food">
+                <p class="advantages__title advantages__title--color--black">Еда</p>
+                <p class="advantages__description advantages__description--color--black">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+              </li>
+            </ul>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title advantages__title--color--white">Там есть мост дьявола</h3>
+            <p class="advantages__number">— №2 —</p>
+            <p class="advantages__description advantages__description--color--white">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            <img class="advantages__photo" src="#" width="1" height="1" alt="Жилье">
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Небольшая площадь</h3>
+            <p class="advantages__number">— №3 —</p>
+            <p class="advantages__description advantages__description--color--white">Все интересные места находятся очень близко</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title advantages__title--color--white">Красивая дорога</h3>
+            <p class="advantages__number">— №4 —</p>
+            <p class="advantages__description advantages__description--color--white">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title advantages__title--color--white">Мало туристов</h3>
+            <p class="advantages__number">— №5 —</p>
+            <p class="advantages__description advantages__description--color--white">Большинство едет в гранд каньон и толпится там</p>
+          </li>
+        </ul>
+      </section>
+      <section class="search-hotel">
+      	<h2 class="visually-hidden"></h2>
+      	<b class="search-hotel__title">Заинтересовались?</b>
+      	<p class="search-hotel__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="search-hotel__button button" href="#">Найти гостиницу</a>
+      </section>
+      <div class="map">
+        
+      </div>
+    </main>
+    <footer class="page-footer">
+      <p class="hashtag">#visitsedona</p>
+      <div class="page-footer__social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--tw" href="#"></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--fb" href="#"></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--yt" href="#"></a>
+          </li>
+        </ul>
+      </div>
+      <div class="page-footer__copyright copyright">
+        <span class="copyright__text">Разработано</span>
+        <a class="copyright__logo" href="#">
+          <img src="#" width="1" height="1" alt="html academy">
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
