--- a/source/form.html
+++ b/source/form.html
@@ -62,11 +62,11 @@
         <fieldset class="form__group">
           <legend class="form__title">Ваше общее впечатление:</legend>
           <label class="form__label form__label--weight--bold" for="positive">Скорее положительное</label>
-          <input type="radio" name="grade" value="positive" checked>
+          <input type="radio" name="grade" value="positive" id="positive" checked>
           <label class="form__label form__label--weight--bold" for="negative">Скорее отрицательное</label>
-          <input type="radio" name="grade" value="negative">
+          <input type="radio" name="grade" value="negative" id="negative">
           <label class="form__label form__label--weight--bold" for="no-answer">Затрудняюсь ответить</label>
-          <input type="radio" name="grade" value="no-answer">
+          <input type="radio" name="grade" value="no-answer" id="no-answer">
         </fieldset>
         <fieldset class="form__group">
           <legend class="form__title">Посещенные достопримечательности</legend>
