--- a/source/photo.html
+++ b/source/photo.html
@@ -73,12 +73,13 @@
         <p class="video__text">скорее за билетами, пока они не</p>
         <p class="video__text">подорожали в очередной раз!</p>
         <video width="1" height="1" controls preload="metadata">
-          <source src="#" type="">
-          <source src="#" type="">
-          <source src="#" type="">
+          <source src="#">
+          <source src="#">
+          <source src="#">
         </video>
       </section>
-      <footer class="page-footer">
+    </main>
+    <footer class="page-footer">
       <p class="hashtag">#visitsedona</p>
       <div class="page-footer__social">
         <ul class="social__list">
