--- a/source/form.html
+++ b/source/form.html
@@ -36,10 +36,10 @@
           <h2 class="visually-hidden">Отзыв о городке Седона</h2>
           <img class="intro__header__landscape" src="#" width="1" height="1" alt="Ландшафт">
           <b class="intro__topic">Оставьте свой отзыв</b>
-          <p class="intro__text">Помогите нашим отелям стать лучше!</p>
-          <p class="intro__text">Оставьте отзыв о них, а также о</p>
-          <p class="intro__text">посещенных вами</p>
-          <p class="intro__text">достопримечательностях</p>
+          <p><span class="intro__text">Помогите нашим отелям стать лучше!</span>
+          <span class="intro__text">Оставьте отзыв о них, а также о</span>
+          <span class="intro__text">посещенных вами</span>
+          <span class="intro__text">достопримечательностях</span></p>
         </header>
       </section>
       <form action="https://echo.htmlacademy.ru" method="post">
@@ -62,22 +62,22 @@
         <fieldset class="form__group">
           <legend class="form__title">Ваше общее впечатление:</legend>
           <label class="form__label form__label--weight--bold" for="positive">Скорее положительное</label>
-          <input type="radio" name="grade" value="positive" id="positive" checked>
+          <input class="visually-hidden" type="radio" name="grade" value="positive" id="positive" checked>
           <label class="form__label form__label--weight--bold" for="negative">Скорее отрицательное</label>
-          <input type="radio" name="grade" value="negative" id="negative">
+          <input class="visually-hidden" type="radio" name="grade" value="negative" id="negative">
           <label class="form__label form__label--weight--bold" for="no-answer">Затрудняюсь ответить</label>
-          <input type="radio" name="grade" value="no-answer" id="no-answer">
+          <input class="visually-hidden" type="radio" name="grade" value="no-answer" id="no-answer">
         </fieldset>
         <fieldset class="form__group">
           <legend class="form__title">Посещенные достопримечательности</legend>
           <label class="form__label form__label--weight--bold" for="bridge">Мост Дьявола</label>
-          <input type="checkbox" name="bridge" id="bridge" checked>
+          <input class="visually-hidden" type="checkbox" name="bridge" id="bridge" checked>
           <label class="form__label form__label--weight--bold" for="mountain">Гора-Колокол</label>
-          <input type="checkbox" name="mountain" id="mountain" checked>
+          <input class="visually-hidden" type="checkbox" name="mountain" id="mountain" checked>
           <label class="form__label form__label--weight--bold" for="slide-park">Слайд-парк</label>
-          <input type="checkbox" name="slide-park" id="slide-park" checked>
+          <input class="visually-hidden" type="checkbox" name="slide-park" id="slide-park" checked>
           <label class="form__label form__label--weight--bold" for="crag">Красные скалы</label>
-          <input type="checkbox" name="crag" id="crag">
+          <input class="visually-hidden" type="checkbox" name="crag" id="crag">
         </fieldset>
         <fieldset class="form__group">
           <legend class="form__title">Опишите свои эмоции:</legend>
