--- a/source/index.html
+++ b/source/index.html
@@ -36,8 +36,8 @@
           <h2 class="visually-hidden">Преимущества городка Седона</h2>
           <img class="intro__header__landscape" src="#" width="1" height="1" alt="Ландшафт">
           <b class="intro__topic">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</b>
-          <p class="intro__intro">Рассмотрим 5 причин, по которым</p>
-          <p class="intro__intro">Седона круче, чем гранд каньон!</p>
+          <p><span class="intro__text">Рассмотрим 5 причин, по которым</span>
+          <span class="intro__text">Седона круче, чем гранд каньон!</span></p>
         </header>
         <ul class="advantages">
           <li class="advantages__item">
