--- a/source/photo.html
+++ b/source/photo.html
@@ -36,9 +36,9 @@
           <h2 class="visually-hidden">Фото и видео городка Седона</h2>
           <img class="intro__header__landscape" src="#" width="1" height="1" alt="Ландшафт">
           <b class="intro__topic">Фото и видео</b>
-          <p class="intro__text">Не можете решиться на путешествие</p>
-          <p class="intro__text">из-за курса? фотографии помогут вам</p>
-          <p class="intro__text">забыть о политике и экономике.</p>
+          <p><span class="intro__text">Не можете решиться на путешествие</span>
+          <span class="intro__text">из-за курса? фотографии помогут вам</span>
+          <span class="intro__text">забыть о политике и экономике.</span></p>
         </header>
       </section>
       <section class="photo">
