--- a/source/index.html
+++ b/source/index.html
@@ -7,84 +7,89 @@
   <body>
     <header class="page-header">
       <nav class="main-nav">
-        <button class="main-nav__toggle toggle-close" type="button"><span class="visually-hidden">Закрыть меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--active">
-              <a>Главная</a>
+            <li class="site-list__item">
+              <a class="site-list__item--active">Главная</a>
             </li>
             <li class="site-list__item">
-              <a href="#">Фото и видео</a>
+              <a href="photo.html">Фото и видео</a>
             </li>
             <li class="site-list__item">
-              <a href="#">Форма отзыва</a>
+              <a href="form.html">Форма отзыва</a>
             </li>
             <li class="site-list__item">
-              <a href="#">HTML Academy</a>
+              <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
             </li>
           </ul>
         </div>
       </nav>
-      <a class="page-header__logo">
+      <a class="page-header__logo" href="https://htmlacademy.ru/intensive/adaptive">
         <img class="page-header__logo-image" src="#" width="1" height="1" alt="Седона">
       </a>
-      <button class="main-nav__toggle toggle-open"><span class="visually-hidden">Открыть меню</span></button>
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
     </header>
     <main class="page-main">
       <section class="intro">
-        <header class="intro__header">
+      	<section class="intro__header">
+          <img class="intro__logo" src="#" width="1" height="1" alt="sedona">
+      	</section>
+        <section class="intro__content">
           <h2 class="visually-hidden">Преимущества городка Седона</h2>
-          <img class="intro__header__landscape" src="#" width="1" height="1" alt="Ландшафт">
-          <b class="intro__topic">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</b>
-          <p><span class="intro__text">Рассмотрим 5 причин, по которым</span>
-          <span class="intro__text">Седона круче, чем гранд каньон!</span></p>
-        </header>
+          <p class="intro__title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</p>
+          <p class="intro__text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+        </section>
         <ul class="advantages">
           <li class="advantages__item">
-            <h3 class="advantages__title advantages__title--color--white">Настоящий городок</h3>
-            <p class="advantages__number">— №1 —</p>
-            <p class="advantages__description advantages__description--color--white">Седона не аттракцион для туристов, там течет своя жизнь</p>
+            <div class="advantages__wrapper">
+              <h3 class="advantages__title">Настоящий городок</h3>
+              <p class="advantages__number">— №1 —</p>
+              <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
+            </div>
             <img class="advantages__photo" src="#" width="1" height="1" alt="Жилье">
-            <ul>
-              <li class="advantages__detail advantages__detail--lodging">
-                <p class="advantages__title advantages__title--color--black">Жилье</p>
-                <p class="advantages__description advantages__description--color--black">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-              </li>
-              <li class="advantages__detail advantages__detail--souvenirs">
-                <p class="advantages__title advantages__title--color--black">Сувениры</p>
-                <p class="advantages__description advantages__description--color--black">Не только китайского, но и местного производства!</p>
-              </li>
-              <li class="advantages__detail advantages__detail--food">
-                <p class="advantages__title advantages__title--color--black">Еда</p>
-                <p class="advantages__description advantages__description--color--black">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-              </li>
-            </ul>
+            <div class="advantages__wrapper--detail">
+              <ul>
+                <li class="advantages__detail advantages__detail--lodging">
+                  <p class="advantages__title">Жилье</p>
+                  <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                </li>
+                <li class="advantages__detail advantages__detail--souvenirs">
+                  <p class="advantages__title">Сувениры</p>
+                  <p class="advantages__description">Не только китайского, но и местного производства!</p>
+                </li>
+                <li class="advantages__detail advantages__detail--food">
+                  <p class="advantages__title">Еда</p>
+                  <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="advantages__item">
-            <h3 class="advantages__title advantages__title--color--white">Там есть мост дьявола</h3>
-            <p class="advantages__number">— №2 —</p>
-            <p class="advantages__description advantages__description--color--white">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            <div class="advantages__wrapper">
+              <h3 class="advantages__title">Там есть мост дьявола</h3>
+              <p class="advantages__number">— №2 —</p>
+              <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            </div>
             <img class="advantages__photo" src="#" width="1" height="1" alt="Жилье">
           </li>
           <li class="advantages__item">
             <h3 class="advantages__title">Небольшая площадь</h3>
             <p class="advantages__number">— №3 —</p>
-            <p class="advantages__description advantages__description--color--white">Все интересные места находятся очень близко</p>
+            <p class="advantages__description">Все интересные места находятся очень близко</p>
           </li>
           <li class="advantages__item">
-            <h3 class="advantages__title advantages__title--color--white">Красивая дорога</h3>
+            <h3 class="advantages__title">Красивая дорога</h3>
             <p class="advantages__number">— №4 —</p>
-            <p class="advantages__description advantages__description--color--white">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="advantages__item">
-            <h3 class="advantages__title advantages__title--color--white">Мало туристов</h3>
+            <h3 class="advantages__title">Мало туристов</h3>
             <p class="advantages__number">— №5 —</p>
-            <p class="advantages__description advantages__description--color--white">Большинство едет в гранд каньон и толпится там</p>
+            <p class="advantages__description">Большинство едет в гранд каньон и толпится там</p>
           </li>
         </ul>
       </section>
       <section class="search-hotel">
-        <h2 class="visually-hidden"></h2>
         <b class="search-hotel__title">Заинтересовались?</b>
         <p class="search-hotel__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="search-hotel__button button" href="#">Найти гостиницу</a>
@@ -95,24 +100,24 @@
     <footer class="page-footer">
       <p class="hashtag">#visitsedona</p>
       <div class="page-footer__social">
-        <ul class="social__list">
+        <ul class="social">
           <li class="social__item">
-            <a class="social__link social__link--tw" href="#"></a>
+            <a class="social__link social__link--tw" href="#">Twitter</a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--fb" href="#"></a>
+            <a class="social__link social__link--fb" href="#">Facebook</a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--yt" href="#"></a>
+            <a class="social__link social__link--yt" href="#">Youtube</a>
           </li>
         </ul>
       </div>
-      <div class="page-footer__copyright copyright">
+      <address class="page-footer__copyright copyright">
         <span class="copyright__text">Разработано</span>
-        <a class="copyright__logo" href="#">
+        <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
           <img src="#" width="1" height="1" alt="html academy">
         </a>
-      </div>
+      </address>
     </footer>
   </body>
 </html>
