Исправляет ошибки в разметке

--- a/source/form.html
+++ b/source/form.html
@@ -27,13 +27,13 @@
       <a class="page-header__logo" href="https://htmlacademy.ru/intensive/adaptive">
         <img class="page-header__logo-image" src="#" width="1" height="1" alt="Седона">
       </a>
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
     </header>
     <main class="page-main">
       <section class="intro">
-      	<section class="intro__header">
+        <section class="intro__header">
           <img class="intro__logo" src="#" width="1" height="1" alt="sedona">
-      	</section>
+        </section>
         <section class="intro__content">
           <h2 class="intro__title">Оставьте свой отзыв</h2>
           <p class="intro__text">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
@@ -43,7 +43,7 @@
         <fieldset class="form__group">
           <legend class="form__title">Представьтесь:</legend>
           <ul class="form__list">
-          	<li class="form__item">
+            <li class="form__item">
               <label class="form__label form__label--weight--norm" for="name">Имя*:</label>
               <input class="form__info--name" type="text" name="name" id="name" placeholder="Петр" required>
             </li>
