--- a/source/photo.html
+++ b/source/photo.html
@@ -27,7 +27,7 @@
       <a class="page-header__logo" href="https://htmlacademy.ru/intensive/adaptive">
         <img class="page-header__logo-image" src="#" width="1" height="1" alt="Седона">
       </a>
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
     </header>
     <main class="page-main">
       <section class="intro">
@@ -114,9 +114,6 @@
               <button class="video__full-window"></button>
             </div>
           </div>
-          <source src="#">
-          <source src="#">
-          <source src="#">
         </div>
       </section>
     </main>
