--- a/source/index.html
+++ b/source/index.html
@@ -27,13 +27,13 @@
       <a class="page-header__logo" href="https://htmlacademy.ru/intensive/adaptive">
         <img class="page-header__logo-image" src="#" width="1" height="1" alt="Седона">
       </a>
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
     </header>
     <main class="page-main">
       <section class="intro">
-      	<section class="intro__header">
+        <section class="intro__header">
           <img class="intro__logo" src="#" width="1" height="1" alt="sedona">
-      	</section>
+        </section>
         <section class="intro__content">
           <h2 class="visually-hidden">Преимущества городка Седона</h2>
           <p class="intro__title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</p>
