--- a/source/index.html
+++ b/source/index.html
@@ -10,16 +10,16 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a class="site-list__item--active">Главная</a>
+              <a class="site-list__link site-list__link--active">Главная</a>
             </li>
             <li class="site-list__item">
-              <a href="photo.html">Фото и видео</a>
+              <a class="site-list__link" href="photo.html">Фото и видео</a>
             </li>
             <li class="site-list__item">
-              <a href="form.html">Форма отзыва</a>
+              <a class="site-list__link" href="form.html">Форма отзыва</a>
             </li>
             <li class="site-list__item">
-              <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+              <a class="site-list__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
             </li>
           </ul>
         </div>
@@ -47,7 +47,7 @@
               <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
             </div>
             <img class="advantages__photo" src="#" width="1" height="1" alt="Жилье">
-            <div class="advantages__wrapper--detail">
+            <div class="advantages__wrapper advantages__wrapper--detail">
               <ul>
                 <li class="advantages__detail advantages__detail--lodging">
                   <p class="advantages__title">Жилье</p>
@@ -102,13 +102,13 @@
       <div class="page-footer__social">
         <ul class="social">
           <li class="social__item">
-            <a class="social__link social__link--tw" href="#">Twitter</a>
+            <a class="social__link social__link--tw" href="#"><span class="visually-hidden">Twitter</span></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--fb" href="#">Facebook</a>
+            <a class="social__link social__link--fb" href="#"><span class="visually-hidden">Facebook</span></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--yt" href="#">Youtube</a>
+            <a class="social__link social__link--yt" href="#"><span class="visually-hidden">Youtube</span></a>
           </li>
         </ul>
       </div>
