--- a/source/photo.html
+++ b/source/photo.html
@@ -10,16 +10,16 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
-              <a href="index.html">Главная</a>
+              <a class="site-list__link" href="index.html">Главная</a>
             </li>
             <li class="site-list__item">
-              <a>Фото и видео</a>
+              <a class="site-list__link site-list__item--active">Фото и видео</a>
             </li>
             <li class="site-list__item">
-              <a href="form.html">Форма отзыва</a>
+              <a class="site-list__link" href="form.html">Форма отзыва</a>
             </li>
             <li class="site-list__item">
-              <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+              <a class="site-list__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
             </li>
           </ul>
         </div>
@@ -45,7 +45,7 @@
             <div class="photo__wrapper">
               <img src="#" width="1" height="1" alt="Неродные просторы">
             </div>
-            <div class="photo__wrapper--text">
+            <div class="photo__text">
               <p class="photo__title">Неродные просторы</p>
               <p class="photo__author">Автор фото: Борис</p>
               <div class="photo__likes">
@@ -58,7 +58,7 @@
             <div class="photo__wrapper">
               <img src="#" width="1" height="1" alt="Местная растительность">
             </div>
-            <div class="photo__wrapper--text">
+            <div class="photo__text">
               <p class="photo__title">Местная растительность</p>
               <p class="photo__author">Автор фото: Сергей</p>
               <div class="photo__likes">
@@ -71,7 +71,7 @@
             <div class="photo__wrapper">
               <img src="#" width="1" height="1" alt="Дорога на север">
             </div>
-            <div class="photo__wrapper--text">
+            <div class="photo__text">
               <p class="photo__title">Дорога на север</p>
               <p class="photo__author">Автор фото: Петр</p>
               <div class="photo__likes">
@@ -84,7 +84,7 @@
             <div class="photo__wrapper">
               <img src="#" width="1" height="1" alt="Мост Дьявола">
             </div>
-            <div class="photo__wrapper--text">
+            <div class="photo__text">
               <p class="photo__title">Мост Дьявола</p>
               <p class="photo__author">Автор фото: Антон</p>
               <div class="photo__likes">
